package proiect;


//Aceasta structura de date este folosita pentru a colecta datele din parser si pentru a le avea sub o forma structurata
//in momentul in care vom face afisarea in interfata grafica

public class UIBridge {
    public String weather;
    public String weather_descr;
    public Double temp;
    public Long humidity;
    public Double wind_speed;
    public Long wind_speed2;
    public String imgCode;


}
