package proiect;

public class inFile {
    public String nume;
    public  String cod;
}
